<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_ef"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/icon_login_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_152"
        app:bl_gradient_endColor="@color/gray_ef"
        app:bl_gradient_startColor="@color/gray_00_ef"
        app:layout_constraintBottom_toBottomOf="@id/iv_login_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_422"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        app:bl_corners_radius="@dimen/dp_16"
        app:bl_solid_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/login_title"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@null"
            android:hint="@string/login_input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingStart="@dimen/dp_13"
            android:textColor="@color/black"
            android:textColorHint="@color/white_16_00"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white_f0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32">

            <EditText
                android:id="@+id/et_login_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginEnd="@dimen/dp_100"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/login_input_code"
                android:paddingStart="@dimen/dp_13"
                android:textColor="@color/black"
                android:textColorHint="@color/white_16_00"
                android:textSize="@dimen/sp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_register_get_code"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_register_get_code"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_44"
                android:layout_marginEnd="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/login_get_code"
                android:textColor="@color/red_e5"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white_f0" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:bl_corners_radius="@dimen/dp_4"
            app:bl_solid_color="@color/red_e5" />

        <LinearLayout
            android:id="@+id/ll_check"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_30">

            <CheckBox
                android:id="@+id/cb_is_select"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:background="@drawable/redio_check"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/login_agree"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_11" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>